[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "lakefs-cli"
description = "Companion package shipping pre-built lakeFS and lakectl binaries"
version = "0.0.0"
keywords = ["lakeFS", "lakectl", "CLI", "binary"]
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
    { name = "Treeverse", email = "services@treeverse.io" },
]
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Version Control",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/treeverse/lakeFS/tree/master/clients/python-cli"

[tool.setuptools.packages.find]
include = ["lakefs_cli", "lakefs_cli.*"]

[tool.setuptools.package-data]
lakefs_cli = ["bin/*"]
