[tool.poetry]
name = "lakefs_sdk"
version = "0.1.0-SNAPSHOT"
description = "lakeFS API"
authors = ["Treeverse <services@treeverse.io>"]
license = "Apache 2.0"
readme = "README.md"
repository = "https://github.com/treeverse/lakeFS"
keywords = ["OpenAPI", "OpenAPI-Generator", "lakeFS API"]
include = ["lakefs_sdk/py.typed"]

[tool.poetry.dependencies]
python = "^3.7"

urllib3 = ">= 1.25.3"
python-dateutil = ">=2.8.2"
pydantic = "^1.10.5, <2"
aenum = ">=3.1.11"

[tool.poetry.dev-dependencies]
pytest = ">=7.2.1"
tox = ">=3.9.0"
flake8 = ">=4.0.0"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pylint.'MESSAGES CONTROL']
extension-pkg-whitelist = "pydantic"

[tool.black]
line-length = 100
target-version = ["py313"]
skip-string-normalization = false

