[tool.poetry]
name = "lakefs_sdk"
version = "0.0.0"
description = "lakeFS API"
authors = ["Treeverse <services@treeverse.io>"]
license = "Apache 2.0"
readme = "README.md"
repository = "https://github.com/treeverse/lakeFS"
keywords = ["OpenAPI", "OpenAPI-Generator", "lakeFS API"]
include = ["lakefs_sdk/py.typed"]

[tool.poetry.dependencies]
python = "^3.9"

urllib3 = ">= 1.25.3"
python-dateutil = ">=2.8.2"
pydantic = ">=2"
typing-extensions = ">=4.7.1"

[tool.poetry.dev-dependencies]
pytest = ">=7.2.1"
tox = ">=3.9.0"
flake8 = ">=4.0.0"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pylint.'MESSAGES CONTROL']
extension-pkg-whitelist = "pydantic"
