[package]
name = "lakefs_sdk"
version = "0.1.0-SNAPSHOT"
authors = ["services@treeverse.io"]
description = "lakeFS HTTP API"
license = "Apache 2.0"
edition = "2018"

[dependencies]
serde = "^1.0"
serde_derive = "^1.0"
serde_with = "^2.0"
serde_json = "^1.0"
url = "^2.2"
uuid = { version = "^1.0", features = ["serde", "v4"] }
[dependencies.reqwest]
version = "^0.11"
features = ["json", "multipart"]
