[package]
name = "delta_diff_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
deltalake = { version = "0.6.0", features = ["s3"] }
prost = "0.11.6"
prost-types = "0.11.6"
serde_json = "1.0.91"
tokio = { version = "1.24.1", features = ["macros", "rt-multi-thread"] }
tonic = "0.8.3"
tonic-health = "0.8.0"
portpicker = "0.1.1"
futures = "0.3"
lazy_static = "1.4"

[build-dependencies]
tonic-build = "0.8.3"

